<?xml version="1.0" encoding="UTF-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/scan"
          android:icon="@android:drawable/ic_menu_search"
          android:title="@string/connect_device" />
    <item android:id="@+id/exit"
          android:icon="@android:drawable/ic_menu_close_clear_cancel"
          android:title="@string/exit" />
    <item android:id="@+id/about"
          android:icon="@android:drawable/ic_menu_info_details"
          android:title="@string/about" />          
    <item android:id="@+id/SetPadKey"
          android:icon="@android:drawable/ic_menu_preferences"
          android:title="@string/set_pad_key" />
    <item android:id="@+id/help"
          android:icon="@android:drawable/ic_menu_help"
          android:title="@string/help" />
</menu>