<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@android:drawable/editbox_background"
        android:scrollbarStyle="outsideOverlay" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/Introduction1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/introduction1"
                android:textColor="#ff000000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/Introduction2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/introduction2"
                android:textColor="#ff000000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/Introduction3"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/introduction3"
                android:textColor="#ff000000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/Introduction4"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/introduction4"
                android:textColor="#ff000000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/Introduction5"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/introduction5"
                android:textColor="#ff000000"
                android:textSize="20sp" />

            <Button
                android:id="@+id/Help_Return"
                android:layout_width="100dip"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="20dip"
                android:layout_marginTop="20dip"
                android:text="@string/back"
                android:textSize="20dip" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>