<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/layout_ms"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <Button
            android:id="@+id/panel"
            android:layout_width="320dip"
            android:layout_height="320dip"
            android:layout_marginTop="40dip"
            android:text="touch the panel to move mouse"
            android:textSize="30sp" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/SV"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical" >

        <LinearLayout
            android:id="@+id/layout_fs"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/PPT"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/ppt_shortcut"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/play"
                    android:layout_width="140dip"
                    android:layout_height="70dip"
                    android:layout_marginLeft="10dip"
                    android:layout_marginRight="10dip"
                    android:text="@string/play" />

                <Button
                    android:id="@+id/exit"
                    android:layout_width="140dip"
                    android:layout_height="70dip"
                    android:layout_marginLeft="10dip"
                    android:layout_marginRight="10dip"
                    android:text="@string/exit" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/pageup"
                    android:layout_width="140dip"
                    android:layout_height="70dip"
                    android:layout_marginLeft="10dip"
                    android:layout_marginRight="10dip"
                    android:text="@string/pageup" />

                <Button
                    android:id="@+id/pagedown"
                    android:layout_width="140dip"
                    android:layout_height="70dip"
                    android:layout_marginLeft="10dip"
                    android:layout_marginRight="10dip"
                    android:text="@string/pagedown" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/black_switch"
                    android:layout_width="140dip"
                    android:layout_height="70dip"
                    android:layout_marginLeft="10dip"
                    android:layout_marginRight="10dip"
                    android:text="@string/black" />
            </LinearLayout>

            <TextView
                android:id="@+id/WMP"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/wp_shortcut"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/play_switch"
                    android:layout_width="140dip"
                    android:layout_height="70dip"
                    android:layout_marginLeft="10dip"
                    android:layout_marginRight="10dip"
                    android:text="@string/wp_play" />

                <Button
                    android:id="@+id/stop"
                    android:layout_width="140dip"
                    android:layout_height="70dip"
                    android:layout_marginLeft="10dip"
                    android:layout_marginRight="10dip"
                    android:text="@string/stop" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/volume_up"
                    android:layout_width="96dip"
                    android:layout_height="70dip"
                    android:layout_marginLeft="10dip"
                    android:layout_marginRight="3dip"
                    android:text="@string/turn_up" />

                <Button
                    android:id="@+id/volume_down"
                    android:layout_width="96dip"
                    android:layout_height="70dip"
                    android:layout_marginLeft="3dip"
                    android:layout_marginRight="3dip"
                    android:text="@string/turn_down" />

                <Button
                    android:id="@+id/mute"
                    android:layout_width="96dip"
                    android:layout_height="70dip"
                    android:layout_marginLeft="3dip"
                    android:layout_marginRight="10dip"
                    android:text="@string/mute" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/last"
                    android:layout_width="140dip"
                    android:layout_height="70dip"
                    android:layout_marginLeft="10dip"
                    android:layout_marginRight="10dip"
                    android:text="@string/last" />

                <Button
                    android:id="@+id/next"
                    android:layout_width="140dip"
                    android:layout_height="70dip"
                    android:layout_marginLeft="10dip"
                    android:layout_marginRight="10dip"
                    android:text="@string/next" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/backward"
                    android:layout_width="140dip"
                    android:layout_height="70dip"
                    android:layout_marginLeft="10dip"
                    android:layout_marginRight="10dip"
                    android:text="@string/backward" />

                <Button
                    android:id="@+id/forward"
                    android:layout_width="140dip"
                    android:layout_height="70dip"
                    android:layout_marginLeft="10dip"
                    android:layout_marginRight="10dip"
                    android:text="@string/forward" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/layout_hs"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <Button
            android:id="@+id/Button_Left"
            android:layout_width="60dip"
            android:layout_height="60dip"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="1dip"
            android:layout_marginTop="1dip"
            android:enabled="false"
            android:text="^"
            android:textSize="30sp" />

        <LinearLayout
            android:id="@+id/layout_hs_updown"
            android:layout_width="fill_parent"
            android:layout_height="60dip"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/Button_Down"
                android:layout_width="60dip"
                android:layout_height="60dip"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="1dip"
                android:layout_marginLeft="70dip"
                android:layout_marginTop="1dip"
                android:enabled="false"
                android:text="@+string/left"
                android:textSize="30sp" />

            <Button
                android:id="@+id/Button_Up"
                android:layout_width="60dip"
                android:layout_height="60dip"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="1dip"
                android:layout_marginLeft="60dip"
                android:layout_marginTop="1dip"
                android:enabled="false"
                android:text=">"
                android:textSize="30sp" />
        </LinearLayout>

        <Button
            android:id="@+id/Button_Right"
            android:layout_width="60dip"
            android:layout_height="60dip"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="1dip"
            android:enabled="false"
            android:text="v"
            android:textSize="30sp" />

        <Button
            android:id="@+id/Button_A"
            android:layout_width="60dip"
            android:layout_height="60dip"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="1dip"
            android:layout_marginTop="5dip"
            android:enabled="false"
            android:text="A"
            android:textSize="30sp" />

        <Button
            android:id="@+id/Button_B"
            android:layout_width="60dip"
            android:layout_height="60dip"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="1dip"
            android:enabled="false"
            android:text="B"
            android:textSize="30sp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/switch_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="5dip"
                android:text="function won&apos;t work before connected"
                android:textSize="20sp" />

            <SeekBar
                android:id="@+id/handle_switch"
                android:layout_width="160dip"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginRight="5dip"
                android:layout_marginTop="5dip"
                android:max="50"
                android:progress="0" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_ks"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/edittext"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="Type to see on PC"
            android:inputType="text" />

        <LinearLayout
            android:id="@+id/layoutButtons"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/kShift"
                android:layout_width="96dip"
                android:layout_height="70dip"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="3dip"
                android:text="Shift" />

            <Button
                android:id="@+id/kAlt"
                android:layout_width="96dip"
                android:layout_height="70dip"
                android:layout_marginLeft="3dip"
                android:layout_marginRight="3dip"
                android:text="Alt" />

            <Button
                android:id="@+id/kCtrl"
                android:layout_width="96dip"
                android:layout_height="70dip"
                android:layout_marginLeft="3dip"
                android:layout_marginRight="10dip"
                android:text="Ctrl" />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>